--- a/material/overrides/home.html
+++ b/material/overrides/home.html
@@ -25,7 +25,7 @@
           </a>
 
           <ul class="nav">
-            <li class="nav-item"><a href="/docs/" class="nav-link">Docs</a></li>
+            <li class="nav-item"><a href="docs" class="nav-link">Docs</a></li>
             <li class="nav-item btn btn-primary"><a href="#" class="nav-link">Sign Up</a></li>
           </ul>
 
