--- a/material/overrides/home.html
+++ b/material/overrides/home.html
@@ -9,6 +9,8 @@
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;800&family=Open+Sans&family=Rubik:wght@300;600;800&display=swap" rel="stylesheet">  
 
     <link rel="stylesheet" href="styles/home.css">
+    <link rel="icon" href="../assets/images/favicon.png">
+    
   </head>
   
   <body class="homepage">
