updated branding styling

--- a/material/overrides/home.html
+++ b/material/overrides/home.html
@@ -10,7 +10,7 @@
 
     <link rel="stylesheet" href="styles/home.css">
     <link rel="icon" href="../assets/images/favicon.png">
-    
+
   </head>
   
   <body class="homepage">
@@ -159,7 +159,7 @@
       <div class="container">
         <div class="row" style="">
           <div class="col-xl-8 offset-xl-2 col-lg-10 offset-lg-1 col-md-12 col-12">
-            <div class="mb-5 text-center">
+            <div class="text-center">
               <h3>Find out how to level-up your pull request review for dbt.</h3>
               <h4>
                 Sign up to be notified when Recce Cloud is available.
