--- a/material/overrides/main.html
+++ b/material/overrides/main.html
@@ -30,5 +30,5 @@
   {{ super() }}
 
   <!-- Extra JavaScript (can't be set in mkdocs.yml due to content hash) -->
-  <script src="{{ 'assets/javascripts/custom.js' | url }}"></script>
+  <script src="{{ 'assets/js/custom.js' | url }}"></script>
 {% endblock %}
