--- a/material/overrides/home.html
+++ b/material/overrides/home.html
@@ -11,6 +11,18 @@
     <link rel="stylesheet" href="styles/home.css">
     <link rel="icon" href="../assets/images/favicon.png">
 
+    
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-E06MSTE2SX"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-E06MSTE2SX');
+    </script>
+
+
   </head>
   
   <body class="homepage">
