open-graph headers

--- a/material/overrides/home.html
+++ b/material/overrides/home.html
@@ -3,10 +3,18 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Recce - Data Change Validation fot dbt Projects</title>
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;800&family=Open+Sans&family=Rubik:wght@300;600;800&display=swap" rel="stylesheet">  
+    <title>Recce - Data-Modeling Validation Toolkit for Analytics and Data Engineers</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;800&family=Open+Sans&family=Rubik:wght@300;600;800&display=swap" rel="stylesheet">
+
+    <meta property="og:title" content="Recce - Data-Modeling Validation Toolkit for Analytics and Data Engineers" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://www.datarecce.io" />
+    <meta
+      property="og:image"
+      content="https://www.datarecce.io/assets/images/recce-og-image.png"
+    />
 
     <link rel="stylesheet" href="styles/home.css">
     <link rel="icon" href="../assets/images/favicon.png">
