--- a/material/overrides/home.html
+++ b/material/overrides/home.html
@@ -11,6 +11,7 @@
     <meta property="og:title" content="Recce - Data-Modeling Validation Toolkit for Analytics and Data Engineers" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://www.datarecce.io" />
+    <meta property="og:description" content="Validate changes, merge fast, and don’t break production data. Recce is the ultimate data-modeling validation toolkit for dbt data projects." />
     <meta
       property="og:image"
       content="https://www.datarecce.io/assets/images/recce-og-image.png"
