--- a/material/overrides/home.html
+++ b/material/overrides/home.html
@@ -49,6 +49,7 @@
 
           <ul class="nav">
             <li class="nav-item"><a href="docs" class="nav-link">Docs</a></li>
+            <li class="nav-item"><a href="blog" class="nav-link">Blog</a></li>
             <li class="nav-item btn btn-primary"><a href="#signup" class="nav-link">Sign Up</a></li>
           </ul>
 
