--- a/material/overrides/home.html
+++ b/material/overrides/home.html
@@ -50,6 +50,7 @@
           <ul class="nav">
             <li class="nav-item"><a href="docs" class="nav-link">Docs</a></li>
             <li class="nav-item"><a href="blog" class="nav-link">Blog</a></li>
+            <li class="nav-item"><a href="https://github.com/datarecce/recce" class="nav-link">GitHub</a></li>  
             <li class="nav-item btn btn-primary"><a href="#signup" class="nav-link">Sign Up</a></li>
           </ul>
 
