Restructure the doc layout
Signed-off-by: popcorny <celu@infuseai.io>

--- a/material/overrides/main.html
+++ b/material/overrides/main.html
@@ -8,7 +8,8 @@
 {% endblock %}
 
 <!-- Announcement bar -->
-{% block announce %}
+{% block announce___ %}
+
   For updates follow us on
   <span style="display: inline-block;">
     <a rel="me" href="https://mastodon.social/@DataRecce" target="_blank">
@@ -29,6 +30,7 @@
       <span class="twemoji linkedin">&nbsp;{% include ".icons/fontawesome/brands/linkedin.svg" %}&nbsp;</span>&nbsp;<strong>LinkedIn</strong>
     </a>
   </span>
+
 {% endblock %}
 
 
