update marketing message in hero section

--- a/material/overrides/home.html
+++ b/material/overrides/home.html
@@ -49,7 +49,7 @@
 
           <ul class="nav">
             <li class="nav-item"><a href="docs" class="nav-link">Docs</a></li>
-            <li class="nav-item"><a href="blog" class="nav-link">Blog</a></li>
+            <li class="nav-item"><a href="https://medium.com/inthepipeline" class="nav-link" target="_blank">Blog</a></li>
             <li class="nav-item"><a href="https://github.com/datarecce/recce" class="nav-link">GitHub</a></li>  
             <li class="nav-item btn btn-primary"><a href="#signup" class="nav-link">Sign Up</a></li>
           </ul>
@@ -63,8 +63,11 @@
         <div class="section-content">
 
           <div class="message">
-            <h1>All&nbsp;Signal, <br />No&nbsp;Noise</h1>
-            <h2>Build the ultimate PR comment to validate your dbt modeling changes by curating the ad-hoc checks that are most relevant to the context of your changes</h2>
+            <h1>Self&#8209;Serve&nbsp;<span>Review</span>&nbsp;for <br />Self&#8209;Serve&nbsp;<span>Data</span></h1>
+            <h2><strong>Contextual data impact analysis</strong> for comprehensive PR review. Validate data impact with <strong>reproducible data testing environments</strong> during development and as part of continuous integration.
+            </h2>
+
+            <a href="/docs/get-started/" class="btn btn-primary btn-large">Get Started</a>
           </div>
           <div class="featured-image">
             <img src="assets/images/featured_image.png" />
@@ -80,7 +83,8 @@
         <div class="row">
 
           <div class="col col-12 col-sm-12 col-lg-6">
-            <h2>Find out how to properly validate dbt data modeling changes, <span class="em">before</span> merging to production.</h2>
+            <h2>Level-up your data project PR review and stop merging breaking changes into production</h2>
+
           </div>
 
           <div class="col col-12 col-sm-12 col-lg-5 offset-lg-1 d-flex flex-column form-holder">
