header and nav styling updated

--- a/material/overrides/home.html
+++ b/material/overrides/home.html
@@ -53,7 +53,7 @@
             <li class="nav-item"><a href="docs" class="nav-link">Docs</a></li>
             <li class="nav-item"><a href="https://medium.com/inthepipeline" class="nav-link" target="_blank">Blog</a></li>
             <li class="nav-item"><a href="https://github.com/datarecce/recce" class="nav-link">GitHub</a></li>  
-            <li class="nav-item btn btn-primary"><a href="#signup" class="nav-link">Sign Up</a></li>
+            <li class="nav-item btn btn-primary signup"><a href="#signup" class="nav-link">Sign Up</a></li>
           </ul>
 
         </div>
