--- a/material/overrides/home.html
+++ b/material/overrides/home.html
@@ -6,7 +6,7 @@
     <title>Recce - Data-Modeling Validation Toolkit for Analytics and Data Engineers</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;800&family=Open+Sans&family=Rubik:wght@300;600;800&family=Lora:ital@0;1&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;800&family=Open+Sans&family=Rubik:wght@300;600;800&family=Lora:wght@400..700&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
@@ -201,17 +201,16 @@
           <div class="row">
             <!-- col -->
             <div class="col-12 col-sm-12 col-md-12 col-lg-10 offset-lg-1 col-xl-8 offset-xl-2">
-              <!-- card -->
+              
               <div class="testimonial">
-                <!-- card body -->
+
                 <div class="testimonial-body">
-
                   <i class="bi bi-quote quote-icon"></i>
-
                   <p class="testimonial-text">
-                    My entire team uses Recce as part of their PR flow...  we use it almost on every PR. I changed a major table in our DB that impacted over 20 down the funnel processes, and (Recce) helped me QA it very efficiently.
+                    <strong>My entire team uses Recce as part of their PR flow</strong>...  we use it almost on every PR. I changed a major table in our DB that impacted over 20 down the funnel processes, and (Recce) helped me QA it very efficiently.
                   </p>
                 </div>
+
                 <div class="testimonial-meta">
                   <div class="testimonial-meta-content">
                     <img src="assets/images/testimonials/testimonial-1.jpg" alt="" class="avatar avatar-md rounded-circle" >
@@ -220,12 +219,33 @@
                       <h5>Head of Data and Analytics at Imagen</h5>
                     </div>
                   </div>
-
                 </div>
+
               </div>
+
+              <div class="testimonial">
+
+                <div class="testimonial-body">
+                  <i class="bi bi-quote quote-icon"></i>
+                  <p class="testimonial-text">
+                    (Recce) helps visualize... everything from the lineage to the single value. You have <strong>a visual representation of the change in values for a PR available to everyone.</strong>
+                  </p>
+                </div>
+
+                <div class="testimonial-meta">
+                  <div class="testimonial-meta-content">
+                    <img src="assets/images/testimonials/testimonial-2.jpg" alt="" class="avatar avatar-md rounded-circle" >
+                    <div class="ms-2">
+                      <h4 class="text-primary mb-0"><a href="https://www.linkedin.com/in/igor-dal-bo-31940150/" target="_blank">Igor Dal Bo</a></h4>
+                      <h5>Data Engineer | FactoryPal</h5>
+                    </div>
+                  </div>
+                </div>
+
+              </div>
+
+
             </div>
-
-
           </div>
 
         </div>
