Add recce cloud blank page
Signed-off-by: popcorny <celu@infuseai.io>

--- a/material/overrides/embed.html
+++ b/material/overrides/embed.html
@@ -1,11 +1,6 @@
 {% extends "base.html" %}
 <!-- Disable header-->
-{% block header %} {% set class = "md-header" %} {% if "navigation.tabs.sticky"
-in features %} {% set class = class ~ " md-header--shadow md-header--lifted" %}
-{% elif "navigation.tabs" not in features %} {% set class = class ~ "
-md-header--shadow" %} {% endif %}
-<header class="{{ class }}" data-md-component="header"></header>
-{% endblock %}
+{% block header %} {% endblock %}
 
 <!-- Disable footer -->
 {% block footer %}{% endblock %}
