Add recce cloud blank page
Signed-off-by: popcorny <celu@infuseai.io>

--- a/material/overrides/embed.html
+++ b/material/overrides/embed.html
@@ -1,7 +1,15 @@
 {% extends "base.html" %}
 <!-- Disable header-->
-{% block header %} {% endblock %}
+{% block header %} {% set class = "md-header" %} {% if "navigation.tabs.sticky"
+in features %} {% set class = class ~ " md-header--shadow md-header--lifted" %}
+{% elif "navigation.tabs" not in features %} {% set class = class ~ "
+md-header--shadow" %} {% endif %}
 
+<header class="{{ class }}" data-md-component="header"></header>
+{% endblock %}
+
+<!-- nav -->
+{% block tabs %} {% endblock %} {% block site_nav %}{% endblock %}
 <!-- Disable footer -->
 {% block footer %}{% endblock %}
 
