--- a/material/overrides/embed.html
+++ b/material/overrides/embed.html
@@ -9,7 +9,7 @@ md-header--shadow" %} {% endif %}
 {% endblock %}
 
 <!-- nav -->
-{% block tabs %} {% endblock %} {% block site_nav %}{% endblock %}
+{% block tabs %} {% endblock %} {% block nav %}{% endblock %}
 <!-- Disable footer -->
 {% block footer %}{% endblock %}
 
