Updated cloud page, added Mailchimp and cal.com embeds

--- a/material/overrides/cloud.html
+++ b/material/overrides/cloud.html
@@ -15,10 +15,10 @@
             <h2><strong>Bring data teams and stakeholders together</strong> to define 'data correctness' with collaborative checks and an <strong>interactive PR review process</strong>
             </h2>
 
-            <a href="/docs/get-started/" class="btn btn-primary btn-large">Early Access</a>
+            <a href="#signup" class="btn btn-primary btn-large">Early Access</a>
           </div>
           <div class="featured-image">
-            <img src="/assets/images/people.png" />
+            <img src="/assets/images/people-2-fs8.png" />
           </div>
 
         </div>
@@ -37,23 +37,69 @@
 
         <div class="row">
           <div class="col col-12 col-sm-12 col-md-4">
-            <h2><span>Build relationships</span><br />through team collaboration</h2>
+            <h2><span>Build data relationships</span><br />through team collaboration</h2>
             <p>Work together on checking and validating data</p>
           </div>
 
           <div class="col col-12 col-sm-12 col-md-4">
-            <h2><span>Build trust</span><br />in your data and your team</h2>
+            <h2><span>Build data trust</span><br />in your data and your team</h2>
             <p>Visualizing and interpreting change with stakeholders builds trust</p>
           </div>
 
           <div class="col col-12 col-sm-12 col-md-4">
-            <h2><span>Build a foundation</span><br />for data analytics</h2>
+            <h2><span>Build data foundations</span><br />for data analytics</h2>
             <p>Confidence in data results in a solid foundation for downstream usage</p>
           </div>
         </div>
 
       </div>
     </div>
+  </section>
+
+  <section class="cloud-form" id="signup">
+
+    <div class="container">
+
+      <div class="section-header">
+        <h2>Sign up for Early Access</h2>
+      </div>
+
+      <div class="row">
+
+<!--         <div class="col-lg-6">
+          <p>Blah</p>
+        </div> -->
+        <div class="col-12">
+
+          <div id="mc_embed_shell">
+                <link href="//cdn-images.mailchimp.com/embedcode/classic-061523.css" rel="stylesheet" type="text/css">
+            <style type="text/css">
+                  #mc_embed_signup{background:#fff; false;clear:left; font:14px Helvetica,Arial,sans-serif; width: 600px;}
+                  /* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
+                     We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+          </style>
+          <div id="mc_embed_signup">
+              <form action="https://datarecce.us1.list-manage.com/subscribe/post?u=2b18366427f11835f05f68aeb&amp;id=b82bfd845e&amp;f_id=006a76e2f0" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank">
+                  <div id="mc_embed_signup_scroll">
+                      <!-- <div class="indicates-required"><span class="asterisk">*</span> indicates required</div> -->
+                      <div class="mc-field-group"><label for="mce-EMAIL"><h2>Email Address <span class="asterisk">*</span></h2></label><input type="email" name="EMAIL" class="required email" id="mce-EMAIL" required="" value=""></div>
+          <div hidden=""><input type="hidden" name="tags" value="6326674"></div>
+                  <div id="mce-responses" class="clear">
+                      <div class="response" id="mce-error-response" style="display: none;"></div>
+                      <div class="response" id="mce-success-response" style="display: none;"></div>
+                  </div><div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_2b18366427f11835f05f68aeb_b82bfd845e" tabindex="-1" value=""></div><div class="clear"><input type="submit" name="subscribe" id="mc-embedded-subscribe" class="button" value="Subscribe"></div>
+              </div>
+          </form>
+          </div>
+          <script type="text/javascript" src="//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js"></script><script type="text/javascript">(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';}(jQuery));var $mcj = jQuery.noConflict(true);</script></div>
+
+
+
+        </div>
+
+      </div><!-- row -->
+    </div><!-- container -->
+
   </section>
 
 
@@ -131,6 +177,11 @@
 
   <section class="cal-book">
 
+    <div class="section-header">
+      <h2>Book <span>a</span> demo</h2>
+      <p>Find out more about how Recce can improve your data PR review process</p>
+    </div>
+
     <!-- Cal inline embed code begins -->
     <div style="width:100%;height:100%;overflow:scroll" id="my-cal-inline"></div>
     <script type="text/javascript">
@@ -143,7 +194,7 @@
       layout: "month_view"
       });
 
-      Cal.ns.chat("ui", {"styles":{"branding":{"brandColor":"#ff6e42"}},"hideEventTypeDetails":false,"layout":"month_view"});
+      Cal.ns.chat("ui", {"theme":"dark","styles":{"branding":{"brandColor":"#ff6e42"}},"hideEventTypeDetails":false,"layout":"month_view"});
       </script>
       <!-- Cal inline embed code ends -->
 
