Recce logo behind CTA

--- a/material/overrides/cloud.html
+++ b/material/overrides/cloud.html
@@ -57,6 +57,7 @@
   </section>
 
   <section class="cloud-form" id="signup">
+    <img src="/assets/images/Logo_Recce_white-fs8.png" class="large-logo" />
 
     <div class="container">
 
