--- a/material/overrides/cloud.html
+++ b/material/overrides/cloud.html
@@ -109,9 +109,9 @@
     <div class="section-content">
 
     <div class="feature">
-        <div class="feature-image overlap">
+        <div class="feature-image ">
           <div class="feature-image-holder">
-            <img src="/assets/images/recce-pr-comment-fs8.png" />
+            <img src="/assets/images/review-together.png" />
           </div>
         </div>
 
@@ -125,9 +125,9 @@
 
 
     <div class="feature">
-        <div class="feature-image overlap">
+        <div class="feature-image">
           <div class="feature-image-holder">
-            <img src="/assets/images/recce-pr-comment-fs8.png" />
+            <img src="/assets/images/continue.png" />
           </div>
         </div>
 
@@ -143,7 +143,7 @@
     <div class="feature">
         <div class="feature-image overlap">
           <div class="feature-image-holder">
-            <img src="/assets/images/recce-pr-comment-fs8.png" />
+            <img src="/assets/images/cloud-review.png" />
           </div>
         </div>
 
@@ -157,9 +157,9 @@
 
 
     <div class="feature">
-        <div class="feature-image overlap">
+        <div class="feature-image">
           <div class="feature-image-holder">
-            <img src="/assets/images/recce-pr-comment-fs8.png" />
+            <img src="/assets/images/approve-checks.png" />
           </div>
         </div>
 
