optimized/organized images

--- a/material/overrides/cloud.html
+++ b/material/overrides/cloud.html
@@ -10,7 +10,7 @@
 
           <div class="message">
             <h3>Recce Cloud</h3>
-            <h1>Collaborative data review<br /> for dbt projects</h1>
+            <h1>Collaborative data&nbsp;review<br /> for dbt projects</h1>
 
             <h2><strong>Bring data teams and stakeholders together</strong> to define 'data correctness' with collaborative checks and an <strong>interactive PR review process</strong>
             </h2>
@@ -18,7 +18,7 @@
             <a href="#signup" class="btn btn-primary btn-large">Early Access</a>
           </div>
           <div class="featured-image">
-            <img src="/assets/images/people-2-fs8.png" />
+            <img src="/assets/images/landing/cloud/data-team.png" />
           </div>
 
         </div>
@@ -111,7 +111,7 @@
     <div class="feature">
         <div class="feature-image ">
           <div class="feature-image-holder">
-            <img src="/assets/images/review-together.png" />
+            <img src="/assets/images/landing/cloud/review-together.png" />
           </div>
         </div>
 
@@ -127,7 +127,7 @@
     <div class="feature">
         <div class="feature-image">
           <div class="feature-image-holder">
-            <img src="/assets/images/continue.png" />
+            <img src="/assets/images/landing/cloud/continue.png" />
           </div>
         </div>
 
@@ -141,9 +141,9 @@
 
 
     <div class="feature">
-        <div class="feature-image overlap">
+        <div class="feature-image">
           <div class="feature-image-holder">
-            <img src="/assets/images/cloud-review.png" />
+            <img src="/assets/images/landing/cloud/cloud-review.png" />
           </div>
         </div>
 
@@ -159,7 +159,7 @@
     <div class="feature">
         <div class="feature-image">
           <div class="feature-image-holder">
-            <img src="/assets/images/approve-checks.png" />
+            <img src="/assets/images/landing/cloud/approve-checks.png" />
           </div>
         </div>
 
