--- a/material/overrides/home.html
+++ b/material/overrides/home.html
@@ -12,10 +12,12 @@
             <h2><strong>Contextual data impact analysis</strong> for comprehensive PR review. Validate data impact with <strong>reproducible data testing environments</strong> during development and as part of continuous integration.
             </h2>
 
-            <a href="/docs/get-started/" class="btn btn-primary btn-large">Get Started</a>
+            <a href="/docs/get-started/" class="btn btn-secondary btn-large">Open Source</a>
+
+            <a href="/cloud/" class="btn btn-primary btn-large">Recce Cloud</a>
           </div>
           <div class="featured-image">
-            <img src="/assets/images/featured_image.png" />
+            <img src="/assets/images/landing/home/featured_image.png" />
           </div>
 
         </div>
@@ -81,7 +83,7 @@
       <div class="feature">
           <div class="feature-image">
             <div class="feature-image-holder">
-              <img src="assets/images/cross-env.png" />
+              <img src="assets/images/landing/home/cross-env.png" />
             </div>
           </div>
 
@@ -97,7 +99,7 @@
       <div class="feature">
           <div class="feature-image">
             <div class="feature-image-holder">
-              <img src="assets/images/diffs.png" />
+              <img src="assets/images/landing/home/diffs.png" />
             </div>
           </div>
 
@@ -113,7 +115,7 @@
       <div class="feature">
           <div class="feature-image overlap">
             <div class="feature-image-holder">
-              <img src="assets/images/recce-pr-comment-fs8.png" />
+              <img src="assets/images/landing/home/recce-pr-comment.png" />
             </div>
           </div>
 
