Added testimonial, updated styling

--- a/material/overrides/home.html
+++ b/material/overrides/home.html
@@ -216,7 +216,7 @@
                     <img src="assets/images/testimonials/testimonial-1.jpg" alt="" class="avatar avatar-md rounded-circle" >
                     <div class="ms-2">
                       <h4 class="text-primary mb-0"><a href="https://www.linkedin.com/in/omri-antman-5557908b/" target="_blank">Omri Antman</a></h4>
-                      <h5>Head of Data and Analytics at Imagen</h5>
+                      <h5>Head of Data and Analytics | Imagen</h5>
                     </div>
                   </div>
                 </div>
@@ -238,6 +238,27 @@
                     <div class="ms-2">
                       <h4 class="text-primary mb-0"><a href="https://www.linkedin.com/in/igor-dal-bo-31940150/" target="_blank">Igor Dal Bo</a></h4>
                       <h5>Data Engineer | FactoryPal</h5>
+                    </div>
+                  </div>
+                </div>
+
+              </div>
+
+              <div class="testimonial">
+
+                <div class="testimonial-body">
+                  <i class="bi bi-quote quote-icon"></i>
+                  <p class="testimonial-text">
+                    Recce provides a powerful set of features out of the box - Perfect for teams without dedicated engineers who can build and maintain bespoke solutions</strong>
+                  </p>
+                </div>
+
+                <div class="testimonial-meta">
+                  <div class="testimonial-meta-content">
+                    <img src="assets/images/testimonials/testimonial-3.jpg" alt="" class="avatar avatar-md rounded-circle" >
+                    <div class="ms-2">
+                      <h4 class="text-primary mb-0"><a href="https://www.linkedin.com/in/yu-hau-bruce-huang-profile/" target="_blank">Bruce Huang</a></h4>
+                      <h5>Data Engineer | Migo</h5>
                     </div>
                   </div>
                 </div>
