--- a/material/overrides/app.html
+++ b/material/overrides/app.html
@@ -51,7 +51,7 @@
 
           <ul class="nav">
             <li class="nav-item"><a href="/cloud" class="nav-link">Cloud</a></li>
-            <li class="nav-item"><a href="https://medium.com/inthepipeline" class="nav-link" target="_blank">Blog</a></li>
+            <li class="nav-item"><a href="/blog" class="nav-link" target="_blank">Blog</a></li>
             <li class="nav-item"><a href="/docs" class="nav-link">Docs</a></li>
             <li class="nav-item"><a href="https://github.com/datarecce/recce" class="nav-link">GitHub</a></li>  
             <li class="nav-item btn btn-primary signup"><a href="#signup" class="nav-link">Sign Up</a></li>
