--- a/material/overrides/home.html
+++ b/material/overrides/home.html
@@ -145,7 +145,8 @@
 
           <div class="row">
             <!-- col -->
-            <div class="col-12 col-sm-12 col-md-12 col-lg-10 offset-lg-1 col-xl-8 offset-xl-2">
+            <!-- <div class="col-12 col-sm-12 col-md-12 col-lg-10 offset-lg-1 col-xl-8 offset-xl-2"> -->
+            <div class="col-12 col-sm-12 col-md-12 testimonials-holder">
               
               <div class="testimonial">
 
@@ -204,6 +205,27 @@
                     <div class="ms-2">
                       <h4 class="text-primary mb-0"><a href="https://www.linkedin.com/in/yu-hau-bruce-huang-profile/" target="_blank">Bruce Huang</a></h4>
                       <h5>Data Engineer | Migo</h5>
+                    </div>
+                  </div>
+                </div>
+
+              </div>
+
+              <div class="testimonial">
+
+                <div class="testimonial-body">
+                  <i class="bi bi-quote quote-icon"></i>
+                  <p class="testimonial-text">
+                    Recce... can simplify your workflow and boost your productivity...<strong>work smarter, not harder</strong>.
+                  </p>
+                </div>
+
+                <div class="testimonial-meta">
+                  <div class="testimonial-meta-content">
+                    <img src="assets/images/testimonials/testimonial-4.jpg" alt="" class="avatar avatar-md rounded-circle" >
+                    <div class="ms-2">
+                      <h4 class="text-primary mb-0"><a href="https://www.linkedin.com/in/andrewdsawyer/" target="_blank">Andy Sawyer</a></h4>
+                      <h5>Strategy Leader & Advisor</h5>
                     </div>
                   </div>
                 </div>
