--- a/material/overrides/firesidechat-signup.html
+++ b/material/overrides/firesidechat-signup.html
@@ -36,6 +36,7 @@
                       <div id="mc_embed_signup_scroll">
                           <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
                           <div class="mc-field-group"><label for="mce-EMAIL">Email Address <span class="asterisk">*</span></label><input type="email" name="EMAIL" class="required email" id="mce-EMAIL" required="" value=""><span id="mce-EMAIL-HELPERTEXT" class="helper_text">Please enter your work email address</span></div><div class="mc-field-group"><label for="mce-FNAME">First Name </label><input type="text" name="FNAME" class=" text" id="mce-FNAME" value=""><span id="mce-FNAME-HELPERTEXT" class="helper_text">What should we call you?</span></div><div class="mc-field-group"><label for="mce-ROLE">Job Role <span class="asterisk">*</span></label><input type="text" name="ROLE" class="required text" id="mce-ROLE" required="" value=""></div>
+                      <div hidden=""><input type="hidden" name="tags" value="6327278"></div>
                       <div id="mce-responses" class="clear">
                           <div class="response" id="mce-error-response" style="display: none;"></div>
                           <div class="response" id="mce-success-response" style="display: none;"></div>
