added image to signup page

--- a/material/overrides/firesidechat-signup.html
+++ b/material/overrides/firesidechat-signup.html
@@ -16,7 +16,7 @@
         <div class="row">
           <div class="col col-12 col-sm-12 col-md-8 offset-md-2 col-lg-8 offset-lg-2 text-center">
 
-            <p>Sign up to the Data Recce mailing list below and we'll email you a link to watch the fireside chat hosted by <a href="https://www.linkedin.com/in/clkao/">CL&nbsp;Kao</a>, founder of <a href="https://datarecce.io/">DataRecce.io</a>, and <a href="https://www.linkedin.com/in/noelgomez/">Noel&nbsp;Gomez</a>, co-founder of <a href="https://datacoves.com/">Datacoves.com</a> on August 27, 2024.</p>
+            <p>If you missed our recent fireside chat, don't worry! Sign up to the Data Recce mailing list below and <strong>we'll email you a link to watch the event</strong> hosted by <a href="https://www.linkedin.com/in/clkao/">CL&nbsp;Kao</a>, founder of <a href="https://datarecce.io/">DataRecce.io</a>, and <a href="https://www.linkedin.com/in/noelgomez/">Noel&nbsp;Gomez</a>, co-founder of <a href="https://datacoves.com/">Datacoves.com</a> on August 27, 2024.</p>
 
           </div>
         </div>
@@ -28,6 +28,8 @@
 
         <div class="row">
           <div class="col col-12 col-sm-12">
+
+            <img src="/assets/images/events/DataRecce-DataCoves_Fireside-chat_20240827_small.jpg" style="width: 100%; max-width: 650px; margin: 2rem auto; display: block; border-radius: 1rem; overflow: hidden;" />
 
             <div id="mc_embed_shell">
               <link href="//cdn-images.mailchimp.com/embedcode/classic-061523.css" rel="stylesheet" type="text/css">
