--- a/material/overrides/blog-post.html
+++ b/material/overrides/blog-post.html
@@ -167,7 +167,33 @@
         {% include "partials/content.html" %}
       {% endblock %}
 
-      
+      <div class="mailchimp-cta">
+        <div id="mc_embed_shell">
+          <link href="//cdn-images.mailchimp.com/embedcode/classic-061523.css" rel="stylesheet" type="text/css">
+
+          <div id="mc_embed_signup">
+            <form action="https://datarecce.us1.list-manage.com/subscribe/post?u=2b18366427f11835f05f68aeb&amp;id=b82bfd845e&amp;f_id=00fd81e5f0" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank">
+              <div id="mc_embed_signup_scroll">
+                <h2>Get Recce updates in your inbox</h2>
+                <h3>Interested in data best practices and Recce usage tips?</h3>
+                <!--div class="indicates-required"><span class="asterisk">*</span> indicates required</div-->
+                <div class="mc-field-group"><label for="mce-EMAIL">Enter your email address to subscribe</label><input type="email" name="EMAIL" class="required email" id="mce-EMAIL" required="" value=""></div>
+                <div hidden=""><input type="hidden" name="tags" value="6327378"></div>
+                <div id="mce-responses" class="clear">
+                  <div class="response" id="mce-error-response" style="display: none;"></div>
+                  <div class="response" id="mce-success-response" style="display: none;"></div>
+                </div>
+                <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_2b18366427f11835f05f68aeb_b82bfd845e" tabindex="-1" value=""></div>
+                <div class="clear">
+                  <input type="submit" name="subscribe" id="mc-embedded-subscribe" class="button" value="Subscribe">
+                </div>
+              </div>
+            </form>
+          </div>
+          <script type="text/javascript" src="//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js"></script><script type="text/javascript">(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[3]='ROLE';ftypes[3]='text';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
+        </div>
+      </div>
+
       <div class="article-cta">
         <script src="https://gist.github.com/DaveFlynn/7dc9b21354a4ee2ea87118bccdad4885.js"></script>
       </div>
