--- a/material/overrides/firesidechat-signup.html
+++ b/material/overrides/firesidechat-signup.html
@@ -39,6 +39,7 @@
                     <div id="mc_embed_signup_scroll">
                         <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
                         <div class="mc-field-group"><label for="mce-EMAIL">Email Address <span class="asterisk">*</span></label><input type="email" name="EMAIL" class="required email" id="mce-EMAIL" required="" value=""></div><div class="mc-field-group"><label for="mce-FNAME">First Name </label><input type="text" name="FNAME" class=" text" id="mce-FNAME" value=""></div><div class="mc-field-group"><label for="mce-MMERGE3">Job Role <span class="asterisk">*</span></label><input type="text" name="MMERGE3" class="required text" id="mce-MMERGE3" value="" required=""></div>
+                        <div hidden=""><input type="hidden" name="tags" value="6327382"></div>
                     <div id="mce-responses" class="clear">
                         <div class="response" id="mce-error-response" style="display: none;"></div>
                         <div class="response" id="mce-success-response" style="display: none;"></div>
