news section for data renegades happy hour

--- a/material/overrides/app.html
+++ b/material/overrides/app.html
@@ -38,6 +38,18 @@
   
   <body class="homepage">
 
+    <div class="announcement-bar">
+      <div class="container">
+        <div class="row">
+          <div class="col col-12 col-sm-12">
+            
+            <p><i class="bi bi-megaphone-fill"></i>  Join us for dbt&nbsp;Coalesce in Las&nbsp;Vegas at the <span>Data&nbsp;Renegade&nbsp;Happy&nbsp;Hour</span>! <i class="bi bi-emoji-heart-eyes-fill"></i></p>
+            <a href="/#news"></a>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <header>
       <div class="container-xl">
         <div class="header-content">
