--- a/material/overrides/home.html
+++ b/material/overrides/home.html
@@ -78,6 +78,63 @@
       </div><!-- row -->
     </section>
 
+    <section class="news" id="news">
+      <div class="container">
+
+        <div class="section-header">
+          <h2 class="pb-0 mb-0">Events</h2>
+          <h2 class="color-brand text-capitalize">See you <span class="text-lowercase">at dbt</span> Coalesce!</h2>
+
+          <div class="row">
+
+            <div class="col col-12 col-sm-12 col-md-10 offset-md-1 col-lg-8 offset-lg-2 text-center">
+
+              <p class="fs-3">In 2024, a crack team of data renegades united in Las Vegas to defy the ordinary. These visionaries, Tobiko, Cube, paradime.io, Datacoves, Recce, and Steep, came together to host the ultimate Happy Hour event...</p>
+
+            </div>
+          </div>
+        </div>
+
+
+        <div class="row gy-1">
+
+          <div class="col col-12 col-sm-12 col-lg-6">
+            
+              <img src="/assets/images/events/the-data-renegade_happy-hour.jpg" style="width: 100%; max-width: 650px; display: block; border-radius: 1rem; overflow: hidden; margin-bottom: 4rem" />
+
+          </div>
+          <div class="col col-12 col-sm-12 col-lg-6">
+
+            <div class="event-details">
+
+              <h3>The Data Renegade Happy Hour: Where Data Power meets Happy Hour</h3>
+              <p>Join the team from Recce and the rest of the rebels on <strong>October 8th at the Data Renegade Happy Hour</strong>.</p>
+
+<!--               <h4 class="pb-0 mb-0">El Dorado Cantina</h4>
+              <p>3025 S Sammy Davis Jr Dr,<br />Las Vegas, NV 89109</p> -->
+
+              <p>Join us for a fun filled and memorable evening to:</p>
+              <ul>
+                <li>Rebel and indulge in some <strong>post-conference shenanigans</strong></li>
+                <li><strong>Connect with industry pros and conference attendees</strong> for some witty banter</li>
+                <li>We'll be offering several seatings for <strong>world class magic shows</strong> by international champion of magic, John George</li>
+              </ul>
+
+              <br />
+
+              <a href="https://cube.registration.goldcast.io/events/09364877-fe00-4531-8923-8d80c8614ff1?utm_source=partner&utm_medium=&UTM_Publisher=&leadsource=&utm_campaign=&campaign_code=&campaignid=&utm_content=Recce#Registration" target="_blank" class="btn btn-lg btn-primary">Register Now</a>
+
+            </div>
+
+          </div>
+
+        </div>
+
+      </div>
+    </section>
+
+
+
     <section class="features">
 
       <div class="feature">
