news section for data renegades happy hour

--- a/material/overrides/home.html
+++ b/material/overrides/home.html
@@ -113,7 +113,7 @@
 <!--               <h4 class="pb-0 mb-0">El Dorado Cantina</h4>
               <p>3025 S Sammy Davis Jr Dr,<br />Las Vegas, NV 89109</p> -->
 
-              <p>Join us for a fun filled and memorable evening to:</p>
+              <p>It'll be a fun filled and memorable evening to:</p>
               <ul>
                 <li>Rebel and indulge in some <strong>post-conference shenanigans</strong></li>
                 <li><strong>Connect with industry pros and conference attendees</strong> for some witty banter</li>
