--- a/material/overrides/home.html
+++ b/material/overrides/home.html
@@ -210,6 +210,27 @@
                 <div class="testimonial-body">
                   <i class="bi bi-quote quote-icon"></i>
                   <p class="testimonial-text">
+                    In my job I have to understand data change, and <strong>Recce was a game changer</strong>. It made our PR review much quicker - <strong>From a day to less than an hour to merge.</strong>
+                  </p>
+                </div>
+
+                <div class="testimonial-meta">
+                  <div class="testimonial-meta-content">
+                    <img src="assets/images/testimonials/testimonial-5.jpg" alt="" class="avatar avatar-md rounded-circle" >
+                    <div class="ms-2">
+                      <h4 class="text-primary mb-0"><a href="https://www.linkedin.com/in/thiagotcunha/" target="_blank">Thiago Trabach</a></h4>
+                      <h5>Head of Data Science &amp; Engineering <br /><span>Prefeitura do Rio de Janeiro</span></h5>
+                    </div>
+                  </div>
+                </div>
+
+              </div>
+
+              <div class="testimonial">
+
+                <div class="testimonial-body">
+                  <i class="bi bi-quote quote-icon"></i>
+                  <p class="testimonial-text">
                     <strong>My entire team uses Recce as part of their PR flow</strong>...  we use it almost on every PR. I changed a major table in our DB that impacted over 20 down the funnel processes, and (Recce) helped me QA it very efficiently.
                   </p>
                 </div>
@@ -219,7 +240,7 @@
                     <img src="assets/images/testimonials/testimonial-1.jpg" alt="" class="avatar avatar-md rounded-circle" >
                     <div class="ms-2">
                       <h4 class="text-primary mb-0"><a href="https://www.linkedin.com/in/omri-antman-5557908b/" target="_blank">Omri Antman</a></h4>
-                      <h5>Head of Data and Analytics | Imagen</h5>
+                      <h5>Head of Data and Analytics<br /><span>Imagen</span></h5>
                     </div>
                   </div>
                 </div>
@@ -240,7 +261,7 @@
                     <img src="assets/images/testimonials/testimonial-2.jpg" alt="" class="avatar avatar-md rounded-circle" >
                     <div class="ms-2">
                       <h4 class="text-primary mb-0"><a href="https://www.linkedin.com/in/igor-dal-bo-31940150/" target="_blank">Igor Dal Bo</a></h4>
-                      <h5>Data Engineer | FactoryPal</h5>
+                      <h5>Data Engineer<br /><span>FactoryPal</span></h5>
                     </div>
                   </div>
                 </div>
@@ -261,7 +282,7 @@
                     <img src="assets/images/testimonials/testimonial-3.jpg" alt="" class="avatar avatar-md rounded-circle" >
                     <div class="ms-2">
                       <h4 class="text-primary mb-0"><a href="https://www.linkedin.com/in/yu-hau-bruce-huang-profile/" target="_blank">Bruce Huang</a></h4>
-                      <h5>Data Engineer | Migo</h5>
+                      <h5>Data Engineer<br /><span>Migo</span></h5>
                     </div>
                   </div>
                 </div>
