--- a/material/overrides/app.html
+++ b/material/overrides/app.html
@@ -6,7 +6,7 @@
     <title>Recce - Data-Modeling Validation Toolkit for Analytics and Data Engineers</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;800&family=Open+Sans&family=Rubik:wght@300;600;800&family=Lora:wght@400..700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;800&family=Open+Sans&family=Rubik:wght@300;600;800&family=Lora:wght@400..700&family=Sriracha&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
@@ -61,13 +61,15 @@
             <h1>Recce</h1>
           </a>
 
-          <ul class="nav">
-            <li class="nav-item"><a href="/cloud" class="nav-link">Cloud</a></li>
-            <li class="nav-item"><a href="/blog" class="nav-link" target="_blank">Blog</a></li>
-            <li class="nav-item"><a href="/docs" class="nav-link">Docs</a></li>
-            <li class="nav-item"><a href="https://github.com/datarecce/recce" class="nav-link">GitHub</a></li>  
-            <li class="nav-item btn btn-primary signup"><a href="#signup" class="nav-link">Sign Up</a></li>
-          </ul>
+          <div class="nav-holder">
+            <ul class="nav">
+              <li class="nav-item"><a href="/cloud" class="nav-link">Cloud</a></li>
+              <li class="nav-item"><a href="/blog" class="nav-link" target="_blank">Blog</a></li>
+              <li class="nav-item"><a href="/docs" class="nav-link">Docs</a></li>
+              <li class="nav-item"><a href="https://github.com/datarecce/recce" class="nav-link">GitHub</a></li>  
+              <li class="nav-item btn btn-primary signup"><a href="#signup" class="nav-link">Sign Up</a></li>
+            </ul>
+            <p class="quotes-cta">Here's <a href="/#users">what our users are saying</a> about Recce <i class="bi bi-chat-heart-fill"></i></p>
 
         </div>
       </div>
