--- a/material/overrides/home.html
+++ b/material/overrides/home.html
@@ -187,7 +187,7 @@
     </section>
 
 
-    <section class="testimonials">
+    <section class="testimonials" id="users">
 
         <div class="container">
           <div class="row">
