--- a/material/overrides/app.html
+++ b/material/overrides/app.html
@@ -64,9 +64,9 @@
           <div class="nav-holder">
             <ul class="nav">
               <li class="nav-item"><a href="/cloud" class="nav-link">Cloud</a></li>
-              <li class="nav-item"><a href="/blog" class="nav-link" target="_blank">Blog</a></li>
+              <li class="nav-item"><a href="/blog" class="nav-link">Blog</a></li>
               <li class="nav-item"><a href="/docs" class="nav-link">Docs</a></li>
-              <li class="nav-item"><a href="https://github.com/datarecce/recce" class="nav-link">GitHub</a></li>  
+              <li class="nav-item"><a href="https://github.com/datarecce/recce" class="nav-link" target="_blank">GitHub <i class="bi bi-box-arrow-up-right"></i></a></li>  
               <li class="nav-item btn btn-primary signup"><a href="#signup" class="nav-link">Sign Up</a></li>
             </ul>
             <p class="quotes-cta">Here's <a href="/#users">what our users are saying</a> about Recce <i class="bi bi-chat-heart-fill"></i></p>
