Added fireside chat to homepage

--- a/material/overrides/home.html
+++ b/material/overrides/home.html
@@ -136,12 +136,12 @@
               <div class="event-details">
 
                 <h3>Data Productivity:<br /><span>Beyond DevOps &amp; dbt</span></h3>
-                <p>The fireside chat recording is now available to <a href="/firesidechat">watch online</a>.  CL Kao of Recce and Noel Gomez of Datacoves discussed how to apply and adapt DevOps tp modern DataOp. Plus:</p>
+                <p>The fireside chat recording is now available to <a href="/firesidechat">watch online</a>.  CL Kao of Recce and Noel Gomez of Datacoves discussed how to apply and adapt DevOps to modern DataOps. Plus, how to improve your team's:</p>
 
                 <ul>
-                  <li>Agility and Speed</li>
-                  <li>Cross-functional Collaboration</li>
-                  <li>Data quality and reliability</li>
+                  <li>agility and speed</li>
+                  <li>cross-functional Collaboration</li>
+                  <li>data quality and reliability</li>
                 </ul>
 
                 <br />
