--- a/material/overrides/main.html
+++ b/material/overrides/main.html
@@ -10,7 +10,7 @@
 <!-- Announcement bar -->
 {% block announce___ %}
 
-  For updates follow us on
+  For updates follow us on 
   <span style="display: inline-block;">
     <a rel="me" href="https://mastodon.social/@DataRecce" target="_blank">
       <span class="twemoji mastodon">
@@ -33,9 +33,9 @@
 
 {% endblock %}
 
-
 <!-- Theme-related JavaScript -->
 {% block scripts %}
+  <script type="text/javascript">window.$crisp=[];window.CRISP_WEBSITE_ID="59c1aed2-e801-48fd-8afe-f9b5cf83a808";(function(){d=document;s=d.createElement("script");s.src="https://client.crisp.chat/l.js";s.async=1;d.getElementsByTagName("head")[0].appendChild(s);})();</script>
   {{ super() }}
 
   <!-- Extra JavaScript (can't be set in mkdocs.yml due to content hash) -->
