--- a/material/overrides/app.html
+++ b/material/overrides/app.html
@@ -39,7 +39,7 @@
   
   <body class="homepage">
 
-    <div class="announcement-bar">
+    <div class="announcement-bar d-none">
       <div class="container">
         <div class="row">
           <div class="col col-12 col-sm-12">
