Added cal.com banner to footer of landing pages and internal docs pages

--- a/material/overrides/home.html
+++ b/material/overrides/home.html
@@ -338,6 +338,12 @@
         </script>
         <!-- Cal inline embed code ends -->
 
+        <p class="text-center py-5">
+          <a href="https://cal.com/team/recce/chat?utm_source=banner&utm_campaign=oss" />
+            <img alt="Book us with Cal.com" src="https://cal.com/book-with-cal-light.svg" />
+          </a>
+        </p>
+
 
     </section>
 
