target _blank on cal.com links

--- a/material/overrides/cloud.html
+++ b/material/overrides/cloud.html
@@ -200,7 +200,7 @@
       <!-- Cal inline embed code ends -->
 
       <p class="text-center py-5">
-        <a href="https://cal.com/team/recce/chat?utm_source=banner&utm_campaign=oss" />
+        <a href="https://cal.com/team/recce/chat?utm_source=banner&utm_campaign=oss"  target="_blank" />
           <img alt="Book us with Cal.com" src="https://cal.com/book-with-cal-light.svg" />
         </a>
       </p>
