moved header meta into template, added links to case study

--- a/material/overrides/case-studies.html
+++ b/material/overrides/case-studies.html
@@ -1,5 +1,18 @@
 {% extends "app.html" %}
 
+{% block meta %}
+    <title>Recce Case Studies - Read about how real data teams are using Recce</title>
+    
+    <meta property="og:title" content="Recce Case Studies - Read about how real data teams are using Recce" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://datarecce.io/case-studies/rio-department-of-health/" />
+    <meta property="og:description" content="Read about how Recce users are improving their dbt PR review process with faster merge times, data-impact visibility, and improved stakeholder comunication" />
+    <meta
+      property="og:image"
+      content="/assets/images/recce-og-image.png"
+    />
+{% endblock %}
+
 
 {% block content %}
 
