--- a/material/overrides/cloud.html
+++ b/material/overrides/cloud.html
@@ -1,6 +1,19 @@
 {% extends "app.html" %}
 
 
+{% block meta %}
+    <title>Recce Cloud - Support dbt Self Serve Data with Self Serve Review</title>
+    
+    <meta property="og:title" content="Recce Cloud - Support dbt Self Serve Data with Self Serve Review" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://datarecce.io/cloud/" />
+    <meta property="og:description" content="Bring data teams and stakeholders together to define 'data correctness' with collaborative checks and an interactive PR review process." />
+    <meta
+      property="og:image"
+      content="/assets/images/recce-og-image.png"
+    />
+{% endblock %}
+
 {% block content %}
 
 
