--- a/material/overrides/home.html
+++ b/material/overrides/home.html
@@ -1,5 +1,18 @@
 {% extends "app.html" %}
 
+{% block meta %}
+    <title>Recce - Data-Modeling Validation Toolkit for Analytics and Data Engineers using dbt</title>
+    
+    <meta property="og:title" content="Recce - Data-Modeling Validation Toolkit for Analytics and Data Engineers using dbt" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://www.datarecce.io" />
+    <meta property="og:description" content="Validate changes, merge fast, and don’t break production data. Recce is the ultimate data-modeling validation toolkit for dbt data projects." />
+    <meta
+      property="og:image"
+      content="/assets/images/recce-og-image.png"
+    />
+{% endblock %}
+
 
 {% block content %}
 
