--- a/material/overrides/app.html
+++ b/material/overrides/app.html
@@ -3,26 +3,18 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Recce - Data-Modeling Validation Toolkit for Analytics and Data Engineers</title>
+    
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;800&family=Open+Sans&family=Rubik:wght@300;600;800&family=Lora:wght@400..700&family=Sriracha&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
-    <meta property="og:title" content="Recce - Data-Modeling Validation Toolkit for Analytics and Data Engineers" />
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://www.datarecce.io" />
-    <meta property="og:description" content="Validate changes, merge fast, and don’t break production data. Recce is the ultimate data-modeling validation toolkit for dbt data projects." />
-    <meta
-      property="og:image"
-      content="https://www.datarecce.io/assets/images/recce-og-image.png"
-    />
+    {% block meta %}{% endblock %}
 
     <link rel="stylesheet" href="/styles/home.css">
     <link rel="icon" href="/assets/images/favicon.png">
 
-    
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-E06MSTE2SX"></script>
     <script>
