--- a/material/overrides/firesidechat-watch.html
+++ b/material/overrides/firesidechat-watch.html
@@ -1,8 +1,21 @@
 {% extends "app.html" %}
 
 
-{% block content %}
+{% block meta %}
+    <title>Recce Fireside Chat - Data Productivity: Beyond DevOps and dbt</title>
+    
+    <meta property="og:title" content="Recce Fireside Chat - Data Productivity: Beyond DevOps and dbt" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://datarecce.io/firesidechat-watch/" />
+    <meta property="og:description" content="CL Kao of Recce and Noel Gomez of Datacoves discussed how to apply and adapt DevOps to modern DataOps." />
+    <meta
+      property="og:image"
+      content="/assets/images/recce-og-image.png"
+    />
+{% endblock %}
 
+
+{% block content %}
 
 
   <section>
