Added case study to homepage news & updates section

--- a/material/overrides/case-study-rio.html
+++ b/material/overrides/case-study-rio.html
@@ -27,7 +27,7 @@
 					<h5>Case Study</h5>
 					<h1>Rio de Janeiro Department of Health</h1>
 					<h2 class="fs-1 fw-normal" >Prefeitura do Rio de Janeiro uses Recce to ensure data correctness of the health records for 7 million people</h2>
-					<p>Recce enabled a formalized and streamlined approach to developing with dbt, providing complete visibility into data impact from modeling changes and eliminating the risk of merging bad data into production.<p>
+					<p>Recce enabled a formalized and streamlined approach to developing with dbt, providing complete visibility into data impact from modeling changes and eliminating the risk of merging bad data into production.</p>
 				</div>
 
 				<div class="col col-12 col-sm-12 col-lg-6 case-study-image d-flex justify-content-center align-items-center" style="background-color: #004a80; padding: 4rem; border-radius: 2rem;">
