--- a/material/overrides/case-study-rio.html
+++ b/material/overrides/case-study-rio.html
@@ -70,7 +70,7 @@
 
 					<p>The health department's data team, consisting of six data scientists and engineers, was tasked with <strong>integrating EHR data from various sources covering around 7 million users and 100 million events</strong>.</p>
 
-					<div class="testimonial">
+					<div class="testimonial-single">
 
 		                <div class="testimonial-body">
 		                  <i class="bi bi-quote quote-icon"></i>
