--- a/material/overrides/cloud.html
+++ b/material/overrides/cloud.html
@@ -16,34 +16,35 @@
 
 {% block content %}
 
+  <section class="hero">
+    <div class="container-xl">
+      <div class="section-content">
 
-  <section class="hero cloud-hero">
-      <div class="container-xl">
-        <div class="section-content">
+        <div class="message">
+          <h1>Recce Design Partnership</h1>
 
-          <div class="message">
-            <h3>Recce Cloud</h3>
-            <h1>Collaborative data&nbsp;review<br /> for dbt projects</h1>
+          <h2>Recce Cloud is available exclusively for Recce design partners.<br />For more information on how to become a design partner <a href="#cal">book a call</a>.</h2>
 
-            <h2><strong>Bring data teams and stakeholders together</strong> to define 'data correctness' with collaborative checks and an <strong>interactive PR review process</strong>
-            </h2>
+          <a href="/docs/get-started/" class="btn btn-primary btn-large">Get Started</a>
 
-            <a href="#signup" class="btn btn-primary btn-large">Early Access</a>
-          </div>
-          <div class="featured-image">
-            <img src="/assets/images/landing/cloud/data-team.png" />
-          </div>
-
+          <a href="#cal" class="btn btn-secondary btn-large">Book a Call</a>
         </div>
+        
+
+
+
       </div>
+    </div>
   </section>
 
   <section class="concept-highlights">
-
     <div class="container-xl">
+
+<!--     <div class="container-xl">
       <div class="section-header">
-        <h2>Build Better Data.</h2>
-      </div>
+        <h2>Collaborative data&nbsp;review<br /> for dbt projects</h2>
+        <p><strong>Bring data teams and stakeholders together</strong> to define 'data correctness' with collaborative checks and an <strong>interactive PR review process</strong></p>
+      </div> -->
 
 
       <div class="section-content">
@@ -69,156 +70,10 @@
     </div>
   </section>
 
-  <section class="cloud-form" id="signup">
-    <img src="/assets/images/Logo_Recce_white-fs8.png" class="large-logo" />
-
-    <div class="container">
-
-      <div class="section-header">
-        <h2>Sign up for Early Access</h2>
-      </div>
-
-      <div class="row">
-
-<!--         <div class="col-lg-6">
-          <p>Blah</p>
-        </div> -->
-        <div class="col-12">
-
-          <div id="mc_embed_shell">
-                <link href="//cdn-images.mailchimp.com/embedcode/classic-061523.css" rel="stylesheet" type="text/css">
-            <style type="text/css">
-                  #mc_embed_signup{background:#fff; false;clear:left; font:14px Helvetica,Arial,sans-serif; width: 600px;}
-                  /* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
-                     We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
-          </style>
-          <div id="mc_embed_signup">
-              <form action="https://datarecce.us1.list-manage.com/subscribe/post?u=2b18366427f11835f05f68aeb&amp;id=b82bfd845e&amp;f_id=006a76e2f0" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank">
-                  <div id="mc_embed_signup_scroll">
-                      <!-- <div class="indicates-required"><span class="asterisk">*</span> indicates required</div> -->
-                      <div class="mc-field-group"><label for="mce-EMAIL"><h2>Email Address <span class="asterisk">*</span></h2></label><input type="email" name="EMAIL" class="required email" id="mce-EMAIL" required="" value=""></div>
-          <div hidden=""><input type="hidden" name="tags" value="6326674"></div>
-                  <div id="mce-responses" class="clear">
-                      <div class="response" id="mce-error-response" style="display: none;"></div>
-                      <div class="response" id="mce-success-response" style="display: none;"></div>
-                  </div><div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_2b18366427f11835f05f68aeb_b82bfd845e" tabindex="-1" value=""></div><div class="clear"><input type="submit" name="subscribe" id="mc-embedded-subscribe" class="button" value="Subscribe"></div>
-              </div>
-          </form>
-          </div>
-          <script type="text/javascript" src="//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js"></script><script type="text/javascript">(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';}(jQuery));var $mcj = jQuery.noConflict(true);</script></div>
 
 
 
-        </div>
 
-      </div><!-- row -->
-    </div><!-- container -->
-
-  </section>
-
-
-  <section class="features cloud-features">
-
-    <div class="section-content">
-
-    <div class="feature">
-        <div class="feature-image ">
-          <div class="feature-image-holder">
-            <img src="/assets/images/landing/cloud/review-together.png" />
-          </div>
-        </div>
-
-        <div class="feature-description">
-          <div class="description-holder">
-            <h2>Review Together</h2>
-            <p>Collaborate with your team on data validation checks and determine the definition of correctness together. <strong>Data engineers, analysts, and business stakeholders can share, work on, and interpret data checks together</strong></p>
-          </div>
-        </div>
-    </div>
-
-
-    <div class="feature">
-        <div class="feature-image">
-          <div class="feature-image-holder">
-            <img src="/assets/images/landing/cloud/continue.png" />
-          </div>
-        </div>
-
-        <div class="feature-description">
-          <div class="description-holder">
-            <h2>Continue where you left off</h2>
-            <p>Data modeling takes time, especially validating your work. Save data validation checks for multiple PRs and seamlessly continue where you left off later</p>
-          </div>
-        </div>
-    </div>
-
-
-    <div class="feature">
-        <div class="feature-image">
-          <div class="feature-image-holder">
-            <img src="/assets/images/landing/cloud/cloud-review.png" />
-          </div>
-        </div>
-
-        <div class="feature-description">
-          <div class="description-holder">
-            <h2>Seamless Review in the Cloud</h2>
-            <p>When it's time to review, the PR reviewer can seamlessly take over and review any data checks in the Cloud. Be alerted to any data mismatches and drill down into the data without needing to install anything locally</p>
-          </div>
-        </div>
-    </div>
-
-
-    <div class="feature">
-        <div class="feature-image">
-          <div class="feature-image-holder">
-            <img src="/assets/images/landing/cloud/approve-checks.png" />
-          </div>
-        </div>
-
-        <div class="feature-description">
-          <div class="description-holder">
-            <h2>Approve checks to merge</h2>
-            <p>Recce’s GitHub app will block merging if there are unapproved checks. Your last gatekeeper to providing a solid foundation of reliable data</p>
-          </div>
-        </div>
-    </div>
-
-
-  </div>
-  </section>
-
-
-  <section class="cal-book">
-
-    <div class="section-header">
-      <h2>Book <span>a</span> demo</h2>
-      <p>Find out more about how Recce can improve your data PR review process</p>
-    </div>
-
-    <!-- Cal inline embed code begins -->
-    <div style="width:100%;height:100%;overflow:scroll" id="my-cal-inline"></div>
-    <script type="text/javascript">
-      (function (C, A, L) { let p = function (a, ar) { a.q.push(ar); }; let d = C.document; C.Cal = C.Cal || function () { let cal = C.Cal; let ar = arguments; if (!cal.loaded) { cal.ns = {}; cal.q = cal.q || []; d.head.appendChild(d.createElement("script")).src = A; cal.loaded = true; } if (ar[0] === L) { const api = function () { p(api, arguments); }; const namespace = ar[1]; api.q = api.q || []; if(typeof namespace === "string"){cal.ns[namespace] = cal.ns[namespace] || api;p(cal.ns[namespace], ar);p(cal, ["initNamespace", namespace]);} else p(cal, ar); return;} p(cal, ar); }; })(window, "https://app.cal.com/embed/embed.js", "init");
-    Cal("init", "chat", {origin:"https://cal.com"});
-
-      Cal.ns.chat("inline", {
-      elementOrSelector:"#my-cal-inline",
-      calLink: "team/recce/chat",
-      layout: "month_view"
-      });
-
-      Cal.ns.chat("ui", {"theme":"dark","styles":{"branding":{"brandColor":"#ff6e42"}},"hideEventTypeDetails":false,"layout":"month_view"});
-      </script>
-      <!-- Cal inline embed code ends -->
-
-      <p class="text-center py-5">
-        <a href="https://cal.com/team/recce/chat?utm_source=banner&utm_campaign=oss"  target="_blank" />
-          <img alt="Book us with Cal.com" src="https://cal.com/book-with-cal-light.svg" />
-        </a>
-      </p>
-
-  </section>
 
 
 
