--- a/material/overrides/cloud.html
+++ b/material/overrides/cloud.html
@@ -23,7 +23,7 @@
         <div class="message">
           <h1>Recce Design Partnership</h1>
 
-          <h2>Recce Cloud is available exclusively for Recce design partners.<br />For more information on how to become a design partner <a href="#cal">book a call</a>.</h2>
+          <h2>Recce Cloud is available exclusively for Recce design partners.<br />For more information on how to become a design partner, <a href="#cal">book a call</a>.</h2>
 
           <a href="/docs/get-started/" class="btn btn-primary btn-large">Get Started</a>
 
