--- a/material/overrides/home.html
+++ b/material/overrides/home.html
@@ -194,7 +194,7 @@
                 <img src="/assets/images/home/merge.svg" />
               </div>
               <h3>Pull Request Best Practices</h3>
-              <p>Recce enables data teams to successfuly implement with data best practices with actionable insights for each PR.</p>
+              <p>Recce enables data teams to successfully implement data best practices with actionable insights for each PR.</p>
             </div>
           
           </div>
