Recce labs mailing list signup page added

--- a/material/overrides/recce-labs.html
+++ b/material/overrides/recce-labs.html
@@ -28,11 +28,12 @@
 						<img src="/assets/images/recce-labs/recce-labs-optimized.png" style="width: 100%; max-width: 500px; height: auto;" alt="Recce Labs Logo" title="Recce Labs" />
 					</div>
 
-					<p><strong>Recce Labs</strong> is out feature experimentation initiative in which we quickly iterate on new features specifically designed to speed up your data review process.</p>
+					<p><strong>Recce Labs</strong> is our feature experimentation initiative, where we quickly iterate on new features specifically designed to speed up your data review process.</p>
 
 					<p>Features such as <a href="/docs/features/breaking-change-analysis/">Breaking Change Analysis</a> started off in Recce Labs, and we have more exciting features planned for the near future.</p>  
 
-					<p>Sign up to the Recce Labs below to be notified when we release new features. If you've already signed-up, you'll get our monthly update roundup!</p>
+					<p>Sign up for the Recce Labs mailing list below to be notified of new features. If you've already signed up, you'll receive our monthly update roundup!</p>
+
 
 					<div class="mailchimp-recce-labs">
 						<div id="mc_embed_shell">
