Added SOC2 section, updated link in case study

--- a/material/overrides/home.html
+++ b/material/overrides/home.html
@@ -522,6 +522,20 @@
       </div>
     </section>
 
+    <section class="text-center security-compliance">
+      <div class="container-xl">
+        <div class="section-content bg-light">
+          <div class="col-md-8 ">
+            <img src="assets/images/security/SOC_2_T1_Logo_Circle_Colour_cropped.png" alt="SOC 2 Certified" class="img-fluid" style="max-width: 200px; margin-top: 2rem; margin-bottom: 2rem">
+            <h2>SOC 2 Certified</h2>
+            <p class="">
+              Recce is SOC 2 Type 1 verified, ensuring the highest standards and processes for secure and reliable data handling 
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <section class="cta" id="signup">
       <div class="container-xl">
         <div class="section-content">
